# market-data-toolkit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: API.md  DESIGN.md  QUICKSTART.md
examples/: example_pipeline.py  validate_csv.py
src/market_data_toolkit/: __init__.py  aggregate.py  exceptions.py  integrity.py  models.py  normalize.py  resample.py  validate.py
tests/: test_aggregate.py  test_errors.py  test_integrity.py  test_models.py  test_normalize.py  test_quality_summary.py  test_resample.py  test_validate.py
